# preselection-trc

./: .gitignore  README.md
Test 1/: README.md  robot.py  roboticArm.py  wheeledRobot.py
Test1/: README.md
Test1/docs/: robot.md  roboticarm.md  wheeledrobot.md
Test1/src/: __init__.py  robot.py  roboticArm.py  wheeledRobot.py
Test2/: readme.md
Test2/src/sensor_data_evaluation/: package.xml  setup.cfg  setup.py
Test2/src/sensor_data_evaluation/launch/: readme.md  sensor_launch.py
Test2/src/sensor_data_evaluation/sensor_data_evaluation/: app_st.py  node_readme.md  readme.md  readme_P.md  readme_S.md  readme_st.md  sensor_publisher.py  sensor_subscriber.py  streamlit_app.py
media/: diagram.mmd
test1/: __init__.py  flyingrobot.py  robot.py  wheeledrobot.py
tests/: test_robotic_arm.py  test_wheeledrobot.py
