<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_data_evaluation</name>
  <version>0.1.0</version>
  <description>Publisher/subscriber ROS2 pour des données aléatoires de capteurs et vérification de plages</description>
  <maintainer email="eudescodo00@gmail.com">cj</maintainer>
  <license>Apache-2.0</license>

  <!-- Outils de build Python -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dépendances standard pour ROS2 Python -->
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- Dépendances pour les messages -->
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Groupe ROS pour générer automatiquement les messages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Dépendances pour les tests -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
